--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,22 +1,49 @@
-name: Deploy React to GitHub Pages
-  # You may pin to the exact commit or the version.
-  # uses: bitovi/github-actions-react-to-github-pages@4cf343888989e21112bce7e59156242a0e1defb3
-  uses: bitovi/github-actions-react-to-github-pages@v1.2.4
-  with:
-    # Specifies if this action should checkout the code
-    checkout: # optional, default is true
-    # Partially clone against a given filter. Overrides checkout-sparse-checkout if set. maps to actions/checkout inputs.checkout-filter
-    checkout-filter: # optional
-    # Do a sparse checkout on given patterns. Each pattern should be separated with new lines. maps to actions/checkout inputs.sparse-checkout
-    checkout-sparse-checkout: # optional
-    # Specifies whether to use cone-mode when doing a sparse checkout. maps to actions/checkout inputs.sparse-checkout-cone-mode
-    checkout-sparse-checkout-cone-mode: # optional, default is true
-    # Specifies the path of the static assets after building
-    path: # optional, default is dist
-    # Specifies the command to run the installation.
-    install_command: # optional, default is npm ci
-    # Specifies the command to run after the install command for the build
-    build_command: # optional, default is npm run build
-    # Specifies if the action should cache npm dependencies.
-    caching: # optional
-          
+name: Deploy
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+
+      - name: Build project
+        run: npm run build
+
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
