--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "install": "^0.13.0",
+    "npm": "^10.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-router-dom": "^7.0.1",
     "styled-components": "^6.1.13"
   },
