--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "framer-motion": "^11.15.0",
     "install": "^0.13.0",
     "npm": "^10.9.1",
     "react": "^18.3.1",
