--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "http://blumoondriving.com",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build && cp dist/index.html dist/404.html",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "vite build && gh-pages -d dist"
@@ -32,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
+    "path": "^0.12.7",
     "sass": "^1.81.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
