--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emailjs/browser": "^4.4.1",
     "framer-motion": "^11.15.0",
     "install": "^0.13.0",
+    "json-loader": "^0.5.7",
     "npm": "^10.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
