--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^7.0.1",
+    "resend": "^4.1.1",
     "styled-components": "^6.1.13",
     "usehooks-ts": "^3.1.0"
   },
