--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm": "^10.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^7.0.1",
     "styled-components": "^6.1.13",
@@ -28,6 +29,7 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
